<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="my_assignment">My Assignment</string>
    <string name="order_currency">Order Currency</string>
    <string name="return_orders">Return/Replace Orders</string>
    <string name="history">History</string>
    <string name="performance">Performance</string>
    <string name="reject_assginment">Reject Assignment</string>
    <string name="assginment_settle"> Assignment Settle</string>
    <string name="language">Change Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="setting">Setting</string>
    <string name="logout">Log Out</string>
    <string name="Assignment_Billing">Assignment Billing</string>
    <string name="Assignment_amount">Assignment Amount</string>
    <string name="Login">LogIn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alert_yes">YES</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="entermobilenumber"> Enter Mobile Number</string>
    <string name="forgot_password_result_title">Forget password request sent successfully, you will receive your password on your mobile number</string>
    <string name="validMobilenumbe">Please enter Valid  Mobile Number</string>
    <string name="start_date">enter start  date</string>
    <string name="end_date">enter End  date</string>
    <string name="correct_date">Please choose correct date</string>
    <string name="error_invalid_quantity_required">Invalid quantity is required!</string>
    <string name="rs">₹</string>
    <string name="in_complete_task">कृपया अपना Task पूरा करे!!!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="hint_passwordr">Password</string>
    <string name="forget_passwordr">Forgot Password ?</string>
    <string name="login">Log In</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="enter_valid_mobile">Enter valid mobile number</string>
    <string name="network_error">No network connection.</string>
    <string name="select_coin">Please select coin</string>
    <string name="errorString">Data not Exist</string>
    <string name="no_data_error">No task available</string>
    <string name="currency_Submit">Successfully done</string>
    <string name="stop_assignment">Stop Assignment</string>
    <string name="assignment_id">Assignment ID :</string>
    <string name="assignment_date">Assignment Date: </string>
    <string name="my_history">My History </string>
    <string name="my_task">My Task</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="search_assignment">Search Assignment</string>
    <string name="no_task">No Task Available</string>
    <string name="My_Profile">My Profile</string>
    <string name="Search">Search</string>
    <string name="OrderID">Order ID:</string>
    <string name="AssignmentID">Assignment ID</string>
    <string name="Pending">Pending</string>
    <string name="Partial">Partial</string>
    <string name="no_assignment">No Assignment Available</string>
    <string name="feature_comingsoon">This Feature is coming Soon</string>
    <string name="Start_Date">Start Date</string>
    <string name="Start">Start</string>
    <string name="view_pdf">View PDF</string>
    <string name="End_Date">End Date</string>
    <string name="order_Canceled">No. of order Canceled :</string>
    <string name="order_Delivered">No. of order Delivered :</string>
    <string name="Assignment_Status">Assignment Status :</string>
    <string name="Assignment_Date">Assignment Date :</string>
    <string name="Order_Details">Order Details</string>
    <string name="view_Details">View Details</string>
    <string name="shopname">Shop Name:</string>
    <string name="orderstatus">Order Status</string>
    <string name="SelectStatus">Select Status</string>
    <string-array name="comment">
        <item>select</item>
        <item>Delivered</item>
        <item>Don\'t Want</item>
        <item>Customer not available</item>
        <item>fake Order</item>
    </string-array>
    <string name="Total">Total</string>
    <string name="Payment_option">Payment Options</string>
    <string name="prepaidonline_status">Prepaid Online</string>
    <string name="online_payment">Online Payment</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="epaylater">Epay Later</string>
    <string name="ChequE_PAYMENT">Cheque Payment</string>
    <string name="moneytransfer_process">The Money Transfer Process in Instant</string>
    <string name="rcv_amnt">Enter Received Amount</string>
    <string name="chque_photo">Cheque Photo is Mandatory</string>
    <string name="prepaid_amnt">Prepaid Amount</string>
    <string name="m_pos_amount">MPOS Payment</string>
    <string name="rtgs_amount">RTGS Payment</string>
    <string name="Reference_number">Reference number</string>
    <string name="amnt_rcv">Amount Received</string>
    <string name="enetr_amnt">Enter Amount</string>
    <string name="no.">NO.</string>
    <string name="items">Items</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="oreder_no"> No. of order:</string>
    <string name="item_no"> No. of Items:</string>
    <string name="Direction">Direction</string>
    <string name="Call">Call</string>
    <string name="Pay_Amount">Pay Amount</string>
    <string name="Paid_Amount">Paid Amount</string>
    <string name="Deliver_popup">Do you want to Deliver order?</string>
    <string name="bar_Code">Enter Bar Code Number</string>
    <string name="submit">Submit</string>
    <string name="Sign_Pad">Sign Pad</string>
    <string name="Sign_here">Sign here</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string-array name="status">
        <item>select</item>
        <item>Delivered</item>
        <item>Delivery Canceled</item>
        <item>Delivery Redispatch</item>
    </string-array>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="valid_moboile_no">Please enter your mobile number</string>
    <string name="msg_sendyou_otp">We will send you an One Time Password</string>
    <string name="Verifying_your_number">Verifying your number !</string>
    <string name="We_have_sent_an_OTP">We have sent an OTP on your number</string>
    <string name="ChangeNumber">Change Number</string>
    <string name="ENETROTP">Enter OTP</string>
    <string name="resendotp">Resend OTP</string>
    <string name="enteotp">Please enter OTP</string>
    <string name="verified">verified</string>
    <string name="internet_connection">Please Connect to Internet</string>
    <string name="enter_correct_otp"> Enter Correct OTP</string>
    <string name="enter_amntrcv">Enter Amount To Received</string>
    <string name="enter_amnt">Enter Amount</string>
    <string name="Short_Item">Short Item</string>
    <string name="Order_List">Order_List</string>
    <string name="hide">Hide</string>
    <string name="enter_mphos">Enter M Pos Reference Number</string>
    <string name="enter_rtgs">Enter RTGS/NEFT  Reference Number</string>
    <string name="enter_ref">Enter Reference Number</string>
    <string name="settle_assignment">Settle Assignment</string>
    <string name="edit">Edit</string>
    <string name="collected_amnt">Collected Amount</string>
    <string name="action">Action</string>
    <string name="mode_pay">Mode Of Payment</string>
    <string name="note">Notes</string>
    <string name="coin">Coins</string>
    <string name="ref_no">Ref no.:</string>
    <string name="total_cllect_history">Total Collection History</string>
    <string name="Cheque_amount">Cheque Amount</string>
    <string name="select_assignment">Select Assignment</string>
    <string name="add_note">Add Note</string>
    <string name="first_save"> First Save Data  </string>
    <string name="check_summary">Please Confirm before Submit Final Cheque Summary  </string>
    <string name="cash_summary">Please Confirm before Submit Final Cash  Summary   </string>
    <string name="online_summary">Please Confirm before Submit Final Online Summary  </string>
    <string name="no">NO</string>
    <string name="cash_0">Cash Amount is 0</string>
    <string name="Cheque_0">Cheque Amount is 0</string>
    <string name="online_0">Online Amount is 0</string>
    <string name="submitassignment">Do you Want to Submit this Assignment?</string>
    <string name="click_here"><u>ClickHere</u>.</string>
    <string-array name="Redispatch_status">
        <item>select</item>
        <item>Delivered</item>
        <item>Delivery Canceled</item>
    </string-array>
    <string-array name="status_online">
        <item>select</item>
        <item>Delivered</item>
        <item>Delivery Redispatch</item>
    </string-array>
    <string-array name="delivered_comment">
        <item>select</item>
        <item>Delivered</item>
    </string-array>
    <string-array name="comment_delivery_cancel">
        
        <item>select</item>
        <item>Wrong Item was sent</item>
        <item>Item Damaged or Expired</item>
        <item>Delivery Delay</item>
        <item>Order Not Placed By Customer</item>
        <item>Double Order Placed by Customer</item>
        <item>MRP Issue</item>
        <item>Item Unavailability</item>
    </string-array>
    <string-array name="comment_delivery_redispatch">
        <item>select</item>
        <item>Customer Not Available</item>
        <item>Shop Closed</item>
        <item>Shop Not Found</item>
    </string-array>
    <string-array name="reason">
        <item>Select Reason</item>
        <item>Don\'t Want</item>
        <item>Others</item>
        
    </string-array>
    <string name="update_btn_txt">UPDATE</string>
    <string name="msg_marshmallow_permission_gps">GPS permission allows us to access location data. Please allow in App Settings for additional functionality.</string>
    <string name="payment_received_txt">Payment Received</string>
    <string name="upi_pay">Pay with UPI</string>
    <string name="cancel">Cancel</string>
    <string name="Closing_Application">Closing Application</string>
    <string name="Exit_APP">Do you want Exit APP?</string>
    <string name="ok">OK</string>
    <string name="enter_total_amt">Please enter total Amount</string>
    <string name="total_amt"> Total Amount</string>
    <string name="choose_status_and_comment">Please choose status and comment</string>
    <string name="enter_cheque_number">Please enter cheque number</string>
    <string name="enter_check_date">Please enter  Cheque date</string>
    <string name="enter_cheque_amt">Please enter cheque Amount</string>
    <string name="enter_reference_id">Please enter MPOS Reference Id</string>
    <string name="enter_reference_mpos_id">Please enter Valid MPOS Reference Id</string>
    <string name="enter_valid_rtgs_id">Please enter Valid RTGS/NEFT Reference Id</string>
    <string name="mpos_id_8"> MPOS Reference Id Should not be less than 8 digit </string>
    <string name="total_submitted">Total Submitted</string>
    <string name="payment_cancel">Payment cancel!</string>
    <string name="payment_pending">Payment Pending!</string>
    <string name="time_out">Time out!</string>
    <string name="order_placed_done"> Successfully Submited !!</string>
    <string name="takephoto">Take Picture</string>
    <string name="addphoto">Add Photo</string>
    <string name="choosefrmlibrary">Choose From Library</string>
    <string name="warning">Warning</string>
    <string name="completetask">Please first complete your Task!!!</string>
</resources>