<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_shape"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/SegoeUISemiBold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="@string/forgot_password_title"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            style="@style/SegoeUISemiBold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/entermobilenumber"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/whiterectangle"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                style="@style/SegoeUISemiBold"
                android:id="@+id/et_Mobile_No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textboxshape"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:layout_marginStart="10dp"
                android:singleLine="true" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@drawable/popup_bottom">

                <TextView
                    style="@style/SegoeUISemiBold"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.19"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ok_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginLeft="1dp"
                android:background="@drawable/popup_bottom2">

                <TextView
                    style="@style/SegoeUISemiBold"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.19"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>


