<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/popup_shape"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1.5">

        <TextView
            style="@style/SegoeUISemiBold"
            android:id="@+id/pd_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/Deliver_popup"
            android:textColor="@color/colorOrange"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="0.4"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@drawable/popup_bottom">

                <TextView
                    style="@style/SegoeUISemiBold"
                    android:id="@+id/cancel_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.19"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginLeft="1dp"
                android:background="@drawable/popup_bottom2">

                <TextView
                    style="@style/SegoeUISemiBold"
                    android:id="@+id/ok_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.19"
                    android:text="@string/alert_yes"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>


