<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.sk.ziladelivery.ui.views.viewmodels.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/delivery_bg"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/app_name"
                        android:padding="5dp"
                        app:srcCompat="@drawable/person_icon" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_mobile"
                        style="@style/SegoeUI"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/view_margin_10"
                        android:background="@drawable/textboxshape"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="@dimen/view_padding_10"
                        android:layout_marginEnd="@dimen/view_padding_10"
                        android:contentDescription="@string/app_name"
                        android:padding="5dp"
                        app:srcCompat="@drawable/password_icon" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/SegoeUI"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/view_padding_10"
                            android:background="@drawable/textboxshape"
                            android:hint="@string/hint_passwordr"
                            android:imeActionLabel="@string/submit"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/tv_forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp">

                <TextView
                    style="@style/CommanStyleSF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_passwordr" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp">

                <Button
                    android:id="@+id/btn_login"
                    style="@style/SegoeUIBold"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/orangerectangle"
                    android:imeOptions="actionDone"
                    android:onClick="onLoginClicked"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</layout>