<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/cardview_shadow_start_color"
            card_view:cardCornerRadius="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">


                <TextView
                    android:id="@+id/assignId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text=""
                    android:textSize="15dp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:weightSum="4">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/total_amt"
                            android:textSize="10.2dp" />

                        <TextView
                            android:id="@+id/assignment_amount"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginTop="15dp"
                            android:gravity="center"
                            android:text=""
                            android:textSize="13dp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/collected_amnt"
                            android:textSize="10.2dp" />

                        <TextView
                            android:id="@+id/collected_amnt"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginTop="15dp"
                            android:gravity="center"
                            android:text=""
                            android:textSize="13dp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/status"
                            android:textSize="10.2dp" />

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginTop="15dp"
                            android:gravity="center"
                            android:text=""
                            android:textSize="13dp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/action"
                            android:textSize="10.2dp" />

                        <Button
                            android:id="@+id/btn_edit"
                            android:layout_width="70dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/ic_circle_blue_shape"
                            android:text="@string/edit"
                            android:textAppearance="@style/TextAppearance.AppCompat"
                            android:textColor="#ffffff"
                            android:textSize="12dp" />


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/note_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Decline Note:"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text=""
                        android:textColor="@color/red" />
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>